--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
           </div>
           <div class="form-group">
 
-            <button class="btn" id="save-task" type="submit">Add Task</button>
+
+            <select name="task-type" class="select-dropdown"> 
+              <option value="" disabled selected>Pick a task type</option>
+              <option value="Print">Print</option>
+              <option value="Web">Web</option>
+              <option value="Mobile">Mobile</option>
+            </select>
+
           </div>
+
+          <button class="btn" id="save-task" type="submit">Add Task</button>
+
         </form>
       </header>
 
